2001-10-18  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (BC_R(store_chartgroup_type)) : store the type as a
	  property rather than a child.
	(BC_R(bar)) : store the attributes as children rather than props.
	(BC_R(line)) : ditto.
	(BC_R(pie)) : ditto.
	(BC_R(pieformat)) : ditto.
	(BC_R(scatter)) : ditto.

2001-10-15  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-write.c (excel_sheet_new) : merge check_sheet into here.
	  rename according to our standards.  Only complain about being too
	  large if the content is too large, silently clip the formats.

2001-10-12  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (BC_R(legend)) : Use more guppi-ish terms for legend
	  location.

2001-10-07  Jody Goldberg <jgoldberg@home.com>

	* Release 0.71

2001-10-03  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (excel_chart_series_write_xml) : fix this for non bonobo
	  builds.

2001-09-30  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (excel_chart_series_write_xml) : Use
	  gnm_graph_series_add_dimension.
	(BC_R(seriestext)) : store constant labels as expresions.

2001-09-28  Jody Goldberg <jgoldberg@home.com>

	* ms-chart.c (excel_chart_series_write_xml) : adjust to new xml
	  structure.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* ms-obj.c (ms_object_attr_bag_lookup) : accept NULL attrBags.

	* ms-escher.c (ms_escher_read_OPT) : oops lost the blip id.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_excel_wb_get_fmt) : renamed something
	  better than biff_format_data_lookup.

	* ms-chart.c (BC_R(ai)) : Use ms_container_get_fmt.
	(BC_R(ifmt)) : ditto.

	* ms-container.c (ms_container_get_fmt) : new function.

2001-09-27  Jody Goldberg <jgoldberg@home.com>

	* ms-excel-read.c (ms_sheet_map_color) : new utility.
	(ms_sheet_create_obj) : set the fill colour.

	* ms-escher.c (ms_escher_read_OPT) : generalize to make things more
	  efficient.

	* ms-obj.c (ms_object_attr_new_uint) : store a uint to facilitate
	  colors.
